Add SEO and social meta tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>four</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html> -->
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Title -->
+    <title>Swiney's Wooden Haven</title>
+
+    <!-- Description for SEO -->
+    <meta name="description" content="Swiney's Wooden Haven - Handmade wooden crafts and furniture.">
+
+    <!-- Keywords for SEO -->
+    <meta name="keywords" content="wood, crafts, furniture, handmade">
+
+    <!-- Author -->
+    <meta name="author" content="Your Name">
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:title" content="Swiney's Wooden Haven">
+    <meta property="og:description" content="Handmade wooden crafts and furniture.">
+    <meta property="og:url" content="https://swineys-wooden-haven.vercel.app">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://swineys-wooden-haven.vercel.app/og-image.png">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Swiney's Wooden Haven">
+    <meta name="twitter:description" content="Handmade wooden crafts and furniture.">
+    <meta name="twitter:image" content="https://swineys-wooden-haven.app/og-image.png">
   </head>
   <body>
     <div id="root"></div>
