--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="xIW06QM7zT60aJoP8uShyoDB-7cNBJCumBUfRHDJLYA" />
     <meta charset="UTF-8" />
 
     <!-- Favicon -->
